compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-2f3234\input\CompileSource:37:20: error: expected ';' after return statement
    return sin(val)
                   ^
                   ;
C:\Users\farre\AppData\Local\Temp\comgr-2f3234\input\CompileSource:48:22: error: expected ';' after return statement
    return cos(value)
                     ^
                     ;
2 errors generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

